--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/altgraph-0.17.2-py2.py3-none-any.whl
+altgraph==0.17.2
 blinker==1.6.2
 click==8.1.3
 Flask==2.3.2
 Flask-Cors==3.0.10
-future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/future-0.18.2-py3-none-any.whl
+future==0.18.2
 importlib-metadata==6.6.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
-macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/macholib-1.15.2-py2.py3-none-any.whl
+macholib==1.15.2
 MarkupSafe==2.1.2
 numpy==1.24.3
 pandas==2.0.1
 psycopg2==2.9.6
 python-dateutil==2.8.2
 pytz==2023.3
-six @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/six-1.15.0-py2.py3-none-any.whl
+six==1.15.0
 tzdata==2023.3
 Werkzeug==2.3.4
 zipp==3.15.0
