frontend/package.json (mui에서 datagrid 다운받았음)
frontend/public/index.html (root의 세로 길이를 변경)

frontend/public/logo.png (혹여나 사용할 까 하여..)

frontend/src/App.css (변화 없음)

frontend/src/App.js (변화 없음)

frontend/src/components/DatasetListView.css (리스트뷰 스타일)

frontend/src/components/DatasetListView.js (리스트뷰)

frontend/src/components/SearchView.css (일단 더미데이터를 InfoList에 넣도록 해둠)

frontend/src/components/SearchView.js (상세 스타일)

frontend/yarn.lock

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "@coreui/coreui": "^4.1.5",
     "@coreui/react": "^4.2.1",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.8.2",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.3",
     "@mui/styled-engine-sc": "^5.8.0",
     "@mui/x-data-grid": "^5.12.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -16,8 +16,9 @@
     "axios": "^0.27.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-data-grid": "^7.0.0-beta.31",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.0"
   },
