[New] upload_manager.py to support dataset upload pipeline - add unzip_dataset (utils/upload_manager.py) - add folders to manage temporal dataset in upload pipeline (.gitignore, uploads/, temporal-datasets/, images/) - parsing description information from upload request form and unzip dataset from frontend (UPLOAD request) (app.py)

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,10 @@ frontend/yarn-error.log*
 
 */__pycache__/
 
-uploads/*.*
+uploads/*
+temporal-datasets/*
+images/*
 
 !uploads/.gitkeep
+!temporal-datasets/.gitkeep
+!images/.gitkeep
