update .ignore - to support download dataset, if service is requested once, downloads-temporal and available directory will be created in project folder. Those doesn't need to be backup in git.

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@ uploads/*
 temporal-datasets/*
 images/*
 
+available/*
+downloads-temporal/*
+
 qcmanager/ckpt_koniq10k.pt
 qcmanager/yolov3-kitti.weights
 
