[update]add cardview in detailview(DatasetListView.js) - [new] CardView.js and CardView.css to support cardview of selected row in listview(dataset) - [updated] .gitignore, package.json, yarn.lock to support cardview

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ downloads-temporal/*
 qcmanager/ckpt_koniq10k.pt
 qcmanager/yolov3-kitti.weights
 
+frontend/public/images/*
+
 !uploads/.gitkeep
 !temporal-datasets/.gitkeep
 !images/.gitkeep
