--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@coreui/react": "^4.2.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.13.3",
     "@mui/styled-engine-sc": "^5.8.0",
     "@mui/x-data-grid": "^6.6.0",
