--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,55 @@
-altgraph==0.17.2
 blinker==1.6.2
+certifi==2023.5.7
+charset-normalizer==3.1.0
 click==8.1.3
+contourpy==1.0.7
+cycler==0.11.0
+einops==0.6.1
+filelock==3.12.0
 Flask==2.3.2
 Flask-Cors==3.0.10
-future==0.18.2
-importlib-metadata==6.6.0
+fonttools==4.39.4
+fsspec==2023.5.0
+huggingface-hub==0.14.1
+idna==3.4
+imageio==2.28.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
-macholib==1.15.2
+jsonpatch==1.32
+jsonpointer==2.3
+kiwisolver==1.4.4
+lazy_loader==0.2
 MarkupSafe==2.1.2
+matplotlib==3.7.1
+mpmath==1.3.0
+networkx==3.1
 numpy==1.24.3
+opencv-python==4.7.0.72
+packaging==23.1
 pandas==2.0.1
+Pillow==9.5.0
 psycopg2==2.9.6
+pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
-six==1.15.0
+pywatchman==1.4.1
+PyWavelets==1.4.1
+PyYAML==6.0
+requests==2.31.0
+safetensors==0.3.1
+scikit-image==0.20.0
+six==1.16.0
+sympy==1.12
+tifffile==2023.4.12
+timm==0.9.2
+torch==2.0.1
+torchvision==0.15.2
+tornado==6.3.2
+tqdm==4.65.0
+typing_extensions==4.6.2
 tzdata==2023.3
-Werkzeug==2.3.4
-zipp==3.15.0
+urllib3==2.0.2
+visdom==0.2.4
+webcolors==1.13
+websocket-client==1.5.2
+Werkzeug==2.3.3
